feat: Add example loading snarkjs generated files and verify

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,6 @@
 [workspace]
 
-#members = [
-#    "exact-arkworks",
-#    "read-from-snarkjs-prove-by-arkworks"
-#]
-
 members = [
-    "exact-arkworks"
+    "exact-arkworks",
+    "read-from-snarkjs-prove-by-arkworks"
 ]
